Задание 3 (часть1) выполнена